--- a/style.scss
+++ b/style.scss
@@ -133,9 +133,15 @@ body {
         border: 2px solid $defRuby;
     }
 }
-
-
-
+.btn-wrapper {
+    text-align: center;
+    color: $defRuby;
+    font-size: 2.8em;
+    margin: 0.7em;
+    .back-to-top {
+      display: inline-block;
+    }
+}
 // second page end
 
 
@@ -226,6 +232,7 @@ body {
         padding-right: 0.2em;
     }
 }
+// country page start
 .firstHeading.cntry-heading-one {
     font-weight: 900;
     font-size: 2.3em;
@@ -234,3 +241,16 @@ body {
 .secondHeading.cntry-heading-two {
     margin-top: 1.2em;
 }
+// mountains page start
+.firstHeading.mtns-heading-one {
+    font-weight: 900;
+    margin-bottom: 0.4em;
+}
+.secondHeading.mtns-heading-two {
+    margin-top: 1.2em;
+}
+
+.articleCity.mtns {
+    margin-top: -0.8em;
+}
+// beach page start
