--- a/style.scss
+++ b/style.scss
@@ -139,7 +139,12 @@ body {
     font-size: 2.8em;
     margin: 0.7em;
     .back-to-top {
+      width: 1.1em;
+      height: 1.1em;
       display: inline-block;
+      i {
+          vertical-align: middle;
+      }
     }
 }
 // second page end
