--- a/style.css
+++ b/style.css
@@ -190,6 +190,12 @@ body {
   top: -5em;
 }
 
+.firstImg, .mntns {
+  overflow: hidden;
+  position: relative;
+  top: -6.06em;
+}
+
 .secondImg {
   overflow: hidden;
   position: relative;
@@ -285,5 +291,9 @@ body {
 
 .secondHeading.cntry-heading-two {
   margin-top: 1.2em;
+}
+
+.firstHeading, .mtns-heading-one {
+  margin-top: -0.5em;
 }
 /*# sourceMappingURL=style.css.map */
