fix beach a alignmnty

--- a/style.scss
+++ b/style.scss
@@ -189,6 +189,9 @@ body {
     position: relative;
     bottom: 6.9em;
 }
+ .bch {
+    margin-top: 6em;
+}
     //articles
 .firstArticle {
     margin: 1.2em;
