--- a/landscapeBlock.css
+++ b/landscapeBlock.css
@@ -1,8 +1,8 @@
 body {
     height: 100vh;
     width: 100vw;
-    background-image: url(https://i.ibb.co/XJ86cCv/lscapeblock.png);
-    background-color: #9d69da;
+    background-image: url(/images/lscapeblock.svg);
+    background-color: white;
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
