--- a/style.css
+++ b/style.css
@@ -353,6 +353,32 @@ body {
   float: right;
 }
 
+.btn-logout {
+  font-size: 1.1em;
+  background: none;
+  margin: 1.2em;
+  margin-top: -0.6em;
+  padding: 0.5em 3.2em;
+  border: 2px solid #594E54;
+  border-radius: 9em;
+  font-family: "Montserrat", sans-serif;
+  -webkit-box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.14);
+          box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.14);
+  color: #594E54;
+  text-align: center;
+  position: relative;
+}
+
+.btn-logout i {
+  font-size: 2.2em;
+  vertical-align: middle;
+  padding-right: 0.2em;
+}
+
+.mg-top {
+  margin-top: 25px;
+}
+
 .settinx {
   margin-top: 1em;
 }
