--- a/style.scss
+++ b/style.scss
@@ -55,7 +55,7 @@ body {
     }
     .logIn {
         font-size: 1.1em;
-        background: none;
+        background: #ffffff;
         margin: 0.4em;
         padding: 1em 4.5em;
         border: 2px solid $defGrey;
@@ -97,7 +97,7 @@ body {
     margin-top: 2em;
     .welcomeBack {
         color: $defGrey;
-        }
+    }
     .profileAvatar {
         font-weight: 900;
         text-decoration: none;
@@ -156,7 +156,7 @@ body {
 }
 .btn-wrapper {
     text-align: center;
-    color: $defRuby;
+    color: $defBlue;
     font-size: 2.8em;
     margin: 0.7em;
     .back-to-top {
@@ -315,6 +315,28 @@ body {
     }
 }
 
+.btn-logout {
+    font-size: 1.1em;
+    background: none;
+    margin: 1.2em;
+    margin-top: -0.6em;
+    padding: 0.5em 3.2em;
+    border: 2px solid $defGrey;
+    border-radius: 9em;
+    font-family: $textFont;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.14);
+    color: $defGrey;
+    text-align: center;
+    position: relative;
+    i {
+        font-size: 2.2em;
+        vertical-align: middle;
+        padding-right: 0.2em;
+    }
+}
+.mg-top {
+    margin-top: 25px;
+}
 .settinx {
     margin-top: 1em;
 }
