--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ body {
 
 .buttonsSection .logIn {
   font-size: 1.1em;
-  background: none;
+  background: #ffffff;
   margin: 0.4em;
   padding: 1em 4.5em;
   border: 2px solid #594E54;
@@ -168,7 +168,7 @@ body {
 
 .btn-wrapper {
   text-align: center;
-  color: #D110A4;
+  color: #9d69da;
   font-size: 2.8em;
   margin: 0.7em;
 }
